@@ -1,4 +1,6 @@
 2010-01-26  Piotr Fusik  <fox@scene.pl>
+* win32/xmplay/xmp-asap.c: got seek working
+
 * win32/Makefile, maketar.pl: replaced maketar.pl with tar,
   get versioned files from git
 
